changes to the burger icon and to the width of the sidemnu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="navDiv" onload="onloadChangedOpacity()">
+    <div id="nav-main">
         <nav id="nav1" >
         <button type="button" name="button">Go</button><input type="text">
         <ul>
@@ -19,8 +19,11 @@
         </ul>
         </nav>
     </div>
-    <div id="div1" onclick="toggle1()">
-        <p>=</p>
+    <div id="burger" onclick="toggle1()">
+        <span>&nbsp;</span>
+        <span>&nbsp;</span>
+        <span>&nbsp;</span>
+        <span>&nbsp;</span>
     </div>
 
 </body>
